# parallel

./: pyproject.toml
parallel/: future.py
src/: multiprocessing.py
